# tiny_mlops

./: Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
mlops_pipeline/: app.py  payload.py  pipeline.py  producer.py  services.py
